# Timegroups

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/timegroups/: __init__.py  df_grouping.py  interfaces.py  time_group.py
tests/: data.py  test_df_grouping.py  test_get_freq_consistent_dfs.py  test_get_time_groups.py  test_guess_freq.py  test_split_df_by_tgs.py  test_time_groups.py
